--- a/GestorTareasApp/res/values/strings.xml
+++ b/GestorTareasApp/res/values/strings.xml
@@ -4,5 +4,13 @@
     <string name="app_name">GestorTareasApp</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="title_activity_login">Login</string>
+    <string name="title_activity_register">Registro</string>
+    <string-array name="Departamentos">
+        <item >Financiero</item>
+        <item >Recursos Humanos</item>
+        <item >Contabilidad</item>
+        <item >Tesorería</item>
+    </string-array>
 
 </resources>
