Registro de tarea realizada

--- a/GestorTareasApp/res/values/strings.xml
+++ b/GestorTareasApp/res/values/strings.xml
@@ -36,5 +36,6 @@
     <string name="title_activity_buscar_tarea_empleado">BuscarTareaEmpleadoActivity</string>
     <string name="title_activity_detalle">DetalleActivity</string>
     <string name="title_activity_prueba">Prueba</string>
+    <string name="title_activity_tarea_realizada">TareaRealizada</string>
 
 </resources>
