--- a/GestorTareasApp/res/values/strings.xml
+++ b/GestorTareasApp/res/values/strings.xml
@@ -37,5 +37,8 @@
     <string name="title_activity_detalle">DetalleActivity</string>
     <string name="title_activity_prueba">Prueba</string>
     <string name="title_activity_tarea_realizada">TareaRealizada</string>
+    <string name="title_activity_notification_view">NotificationView</string>
+    <string name="title_activity_bye">Bye</string>
+    <string name="title_activity_alarm">AlarmActivity</string>
 
 </resources>
