Eficiencia por empleado

--- a/GestorTareasApp/res/values/strings.xml
+++ b/GestorTareasApp/res/values/strings.xml
@@ -33,18 +33,22 @@
 
     <string name="title_activity_buscar_tarea">BuscarTarea</string>
     <string name="title_activity_spinner">SpinnerActivity</string>
-    <string name="title_activity_buscar_tarea_empleado">Buscar Tarea Empleado</string>
+    <string name="title_activity_buscar_tarea_empleado">Buscar Tarea</string>
     <string name="title_activity_detalle">Detalle de la Tarea</string>
     <string name="title_activity_prueba">Prueba</string>
     <string name="title_activity_tarea_realizada">TareaRealizada</string>
     <string name="title_activity_notification_view">NotificationView</string>
     <string name="title_activity_bye">Bye</string>
     <string name="title_activity_alarm">AlarmActivity</string>
-    <string name="title_activity_eficiencia">EficienciaActivity</string>
+    <string name="title_activity_eficiencia">Eficiencia</string>
     <string name="title_activity_eficiencia_general">EficienciaGeneral</string>
     <string name="title_activity_eficiencia_tarea">Eficiencia_tarea</string>
     <string name="title_activity_buscar_eficiencia">BuscarEficiencia</string>
     <string name="title_activity_menu_empleado">Menu Empleado</string>
     <string name="title_activity_tarea_pendiente">Tareas Pendientes</string>
+    <string name="title_activity_editar_tarea_realizada">Editar Tarea Realizada</string>
+    <string name="title_activity_eficiencia_gempleado">Eficiencia General</string>
+    <string name="title_activity_eficiencia_templeado">EficienciaTEmpleado</string>
+    <string name="title_activity_menu_eficiencia_empleado">Menu Eficiencia Empleado</string>
 
 </resources>
