--- a/GestorTareasApp/res/values/strings.xml
+++ b/GestorTareasApp/res/values/strings.xml
@@ -17,7 +17,7 @@
 
     <string name="Hola_tu">Hola_tu</string>
     <string name="title_activity_tareas">Tareas</string>
-    <string name="title_activity_nueva_tarea">NuevaTarea</string>
+    <string name="title_activity_nueva_tarea">Nueva Tarea</string>
 
     <string-array name="Personas">
         <item>Seleccione empleado</item>
@@ -39,7 +39,7 @@
     <string name="title_activity_tarea_realizada">TareaRealizada</string>
     <string name="title_activity_notification_view">NotificationView</string>
     <string name="title_activity_bye">Bye</string>
-    <string name="title_activity_alarm">AlarmActivity</string>
+    <string name="title_activity_alarm">Alarma</string>
     <string name="title_activity_eficiencia">Eficiencia</string>
     <string name="title_activity_eficiencia_general">EficienciaGeneral</string>
     <string name="title_activity_eficiencia_tarea">Eficiencia_tarea</string>
